# LVGL_lottie_test

./: CMakeCache.txt  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port.c  esp_lvgl_port_disp.c
components/lvgl__lvgl/env_support/cmake/: esp.cmake
components/lvgl__lvgl/examples/widgets/lottie/: lv_example_lottie_approve.c
components/lvgl__lvgl/src/draw/sw/: lv_draw_sw.c
components/lvgl__lvgl/src/libs/thorvg/: tvgInitializer.cpp
components/lvgl__lvgl/src/widgets/lottie/: lv_lottie.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/bsp/include/: bsp_adc.h  bsp_as7341.h  bsp_ds18b20.h  bsp_lcd.h  bsp_ltr390uv.h  bsp_lvgl.h
main/bsp/src/: bsp_adc.c  bsp_as7341.c  bsp_ds18b20.c  bsp_lcd.c  bsp_ltr390uv.c  bsp_lvgl.c
main/lottie_img/hex/: Catout.h  eye.h
