idf_component_register(
    SRCS
        "main.c"
        "./bsp/src/bsp_lcd.c"
        "./bsp/src/bsp_lvgl.c"
    INCLUDE_DIRS
        "."
        "./bsp/include"
    REQUIRES
        driver
        esp_lcd
        teriyakigod__esp_lcd_st7735
        esp_lvgl_port
        lvgl__lvgl
        esp_rlottie
)