idf_component_register(
    SRCS
        "main.c"
        "./bsp/src/bsp_lcd.c"
        "./bsp/src/bsp_lvgl.c"
        "./bsp/src/bsp_ltr390uv.c"
        "./bsp/src/bsp_ds18b20.c"
        "./bsp/src/bsp_adc.c"
    INCLUDE_DIRS
        "."
        "./bsp/include"
        "./lottie_img/hex"
    REQUIRES
        driver
        esp_lcd
        teriyakigod__esp_lcd_st7735
        esp_lvgl_port
        lvgl__lvgl
        esp_rlottie
        k0i05__esp_ltr390uv
        k0i05__esp_type_utils
        espressif__ds18b20
        espressif__onewire_bus
        esp_adc 
)